hphp/hack/test/typecheck/expression_trees/dollar_this.php.exp
File "dollar_this.php", line 7, characters 10-14:
`$this` is not bound inside expression trees (Typing[4095])
