hphp/hack/test/typecheck/expression_trees/dollar_this.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

class MyClass {
  public function foo(): void {
    Code`$this`;
  }
}
